--- a/SGit/res/menu/main.xml
+++ b/SGit/res/menu/main.xml
@@ -33,13 +33,13 @@
         android:title="@string/action_donate"/>
 
     <!--
-    TODO settings will be added in next release
+    TODO settings will be added in next release-->
     <item
             android:id="@+id/action_settings"
             android:icon="@drawable/ic_action_settings"
             android:title="@string/action_settings"
             android:orderInCategory="100"
             android:showAsAction="never"/>
-    -->
+    <!-- -->
 
 </menu>
